# doc_analysis

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  UPGRADE_SUMMARY.md  project_submission.md  pyproject.toml  requirements.txt  start_backend.sh  start_frontend.sh
backend/: __init__.py  main.py
backend/api/: main.py
backend/core/: analytics.py  bm25_search.py  document_processor.py  domain_detector.py  entity_config.json  entity_extractor.py  entity_validator.py  graph_builder.py  index_builder.py  relation_extractor.py  topic_extractor.py
backend/data/: registry.json
backend/data/entities/: 0c6e2e96_entities.json  5135e436_entities.json  d7e32f43_entities.json
backend/data/graphs/: 0c6e2e96_graph.json  5135e436_graph.json  d7e32f43_graph.json
backend/data/indexes/: 0c6e2e96_index.json  5135e436_index.json  578c407a_index.json  d7e32f43_index.json
backend/data/processed/: 0c6e2e96.json  5135e436.json  578c407a.json  d7e32f43.json
backend/data/topics/: 0c6e2e96_topics.json  5135e436_topics.json  d7e32f43_topics.json  test_finance_topics.json  test_legal_topics.json  test_medical_topics.json  test_research_topics.json  test_technical_topics.json
backend/tests/: test_topic_extractor.py
data/: registry.json
data/entities/: 2c6cc45b_entities.json
data/graphs/: 2c6cc45b_graph.json
data/indexes/: 2c6cc45b_index.json  global_index.json
data/processed/: 2c6cc45b.json
data/topics/: 2c6cc45b_topics.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
tests/: test_topic_extractor.py
(+11 files in other folders)
