[project]
name = "doc-analytics"
version = "1.0.0"
description = "LLM-Powered Document Analytics Engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pymupdf>=1.25.0",
    "pymupdf4llm>=0.0.17",
    "python-docx>=1.1.2",
    "spacy>=3.8.0",
    "networkx>=3.4.0",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
